feat: Better support for resolving and dereferencing.