@@ -1,26 +1,26 @@
 package uniresolver.web.servlet;
 
-import java.io.IOException;
-import java.net.URLDecoder;
-import java.util.List;
+import foundation.identity.did.representations.Representations;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.MediaType;
+import uniresolver.result.ResolveResult;
+import uniresolver.util.HttpBindingUtil;
+import uniresolver.web.WebUniResolver;
 
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
-import foundation.identity.did.DIDDocument;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import org.springframework.http.MediaType;
-import uniresolver.result.ResolveResult;
-import uniresolver.web.WebUniResolver;
+import java.io.IOException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class ResolveServlet extends WebUniResolver {
 
-	protected static Logger log = LoggerFactory.getLogger(ResolveServlet.class);
-
-	public static final String MIME_TYPE = "application/json";
+	protected static final Logger log = LoggerFactory.getLogger(ResolveServlet.class);
 
 	@Override
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -36,24 +36,31 @@ public class ResolveServlet extends WebUniResolver {
 
 		String identifier = requestPath.substring(contextPath.length() + servletPath.length());
 		if (identifier.startsWith("/")) identifier = identifier.substring(1);
-
-		try {
-
-			identifier = URLDecoder.decode(identifier, "UTF-8");
-		} catch (Exception ex) {
-
-			if (log.isWarnEnabled()) log.warn("Request problem: " + ex.getMessage(), ex);
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, null, "Request problem: " + ex.getMessage());
-			return;
-		}
+		identifier = URLDecoder.decode(identifier, StandardCharsets.UTF_8);
 
 		if (log.isInfoEnabled()) log.info("Incoming resolve request for identifier: " + identifier);
 
 		if (identifier == null) {
 
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_BAD_REQUEST, null, "No identifier found in resolve request.");
+			ServletUtil.sendResponse(response, HttpServletResponse.SC_BAD_REQUEST, null, "No identifier found in resolve request.");
 			return;
 		}
+
+		// assume identifier is a DID
+
+		String didString = identifier;
+
+		// prepare resolution options
+
+		String acceptHeaderString = request.getHeader("Accept");
+		List<MediaType> acceptMediaTypes = MediaType.parseMediaTypes(acceptHeaderString != null ? acceptHeaderString : "*/*");
+		MediaType.sortBySpecificityAndQuality(acceptMediaTypes);
+
+		String accept = acceptMediaTypes.size() > 0 ? acceptMediaTypes.get(0).toString() : null;
+		if (accept == null || ! Representations.MEDIA_TYPES.contains(accept)) accept = Representations.DEFAULT_MEDIA_TYPE;
+
+		Map<String, Object> resolutionOptions = new HashMap<>();
+		resolutionOptions.put("accept", accept);
 
 		// execute the request
 
@@ -61,66 +68,49 @@ public class ResolveServlet extends WebUniResolver {
 
 		try {
 
-			resolveResult = this.resolve(identifier);
+			resolveResult = this.resolveRepresentation(didString, resolutionOptions);
 		} catch (Exception ex) {
 
-			if (log.isWarnEnabled()) log.warn("Resolve problem for " + identifier + ": " + ex.getMessage(), ex);
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, null, "Resolve problem for " + identifier + ": " + ex.getMessage());
+			if (log.isWarnEnabled()) log.warn("Resolve problem for " + didString + ": " + ex.getMessage(), ex);
+			ServletUtil.sendResponse(response, HttpServletResponse.SC_INTERNAL_SERVER_ERROR, null, "Resolve problem for " + didString + ": " + ex.getMessage());
 			return;
 		}
 
-		if (log.isInfoEnabled()) log.info("Resolve result for " + identifier + ": " + resolveResult);
+		if (log.isInfoEnabled()) log.info("Resolve result for " + didString + ": " + resolveResult);
 
 		// no resolve result?
 
-		if (resolveResult == null || (resolveResult.getDidDocument() == null && resolveResult.getContent() == null)) {
+		if (resolveResult == null || resolveResult.getDidDocumentStream() == null) {
 
-			WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No resolve result for " + identifier + ": " + resolveResult);
+			ServletUtil.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No resolve result for " + didString + ": " + resolveResult);
 			return;
 		}
 
 		// write resolve result
 
-		String acceptHeader = request.getHeader("Accept");
-		List<MediaType> acceptMediaTypes = MediaType.parseMediaTypes(acceptHeader != null ? acceptHeader : "*/*");
-		MediaType.sortBySpecificityAndQuality(acceptMediaTypes);
-
 		for (MediaType acceptMediaType : acceptMediaTypes) {
 
-			if (log.isDebugEnabled()) log.warn("Trying to find content for media type " + acceptMediaType);
+			String contentType = (String) resolveResult.getDidResolutionMetadata().get("contentType");
+			if (log.isDebugEnabled()) log.debug("Trying to find content for media type " + acceptMediaType + " to satisfy " + contentType);
 
-			if (acceptMediaType.includes(MediaType.valueOf(ResolveResult.MIME_TYPE))) {
+			if (acceptMediaType.includes(MediaType.valueOf(ResolveResult.MEDIA_TYPE))) {
 
-				resolveResult.getDidResolutionMetadata().put("contentType", DIDDocument.MIME_TYPE_JSON_LD);
-
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, ResolveResult.MIME_TYPE, resolveResult.toJson());
+				ServletUtil.sendResponse(response, HttpServletResponse.SC_OK, ResolveResult.MEDIA_TYPE, HttpBindingUtil.toHttpBodyResolveResult(resolveResult));
 				return;
-			} else if (acceptMediaType.includes(MediaType.valueOf(DIDDocument.MIME_TYPE_JSON_LD))) {
+			} else if (contentType != null && acceptMediaType.includes(MediaType.valueOf(contentType))) {
 
-				if (resolveResult.getDidDocument() == null) {
+				if (resolveResult.getDidDocumentStream() == null) {
 
-					WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No DID document for " + identifier);
+					ServletUtil.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No content for " + didString);
 					return;
 				}
 
-				resolveResult.getDidResolutionMetadata().put("contentType", DIDDocument.MIME_TYPE_JSON_LD);
-
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, DIDDocument.MIME_TYPE_JSON_LD, resolveResult.getDidDocument().toJson());
-				return;
-			} else if (resolveResult.getContentType() != null && acceptMediaType.includes(MediaType.valueOf(resolveResult.getContentType()))) {
-
-				if (resolveResult.getContent() == null) {
-
-					WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_FOUND, null, "No content for " + identifier);
-					return;
-				}
-
-				WebUniResolver.sendResponse(response, HttpServletResponse.SC_OK, resolveResult.getContentType(), resolveResult.getContent());
+				ServletUtil.sendResponse(response, HttpServletResponse.SC_OK, contentType, resolveResult.getDidDocumentStream());
 				return;
 			}
 		}
 
-		WebUniResolver.sendResponse(response, HttpServletResponse.SC_NOT_ACCEPTABLE, null, "Not acceptable media type " + acceptHeader);
+		ServletUtil.sendResponse(response, HttpServletResponse.SC_NOT_ACCEPTABLE, null, "Not acceptable media type " + acceptHeaderString);
 		return;
 	}
 }
